src/objects/Job_Potential_Franchise__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Potential Franchise</relationshipLabel>
        <relationshipName>Job_Potential_Franchise</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Potential Franchise</relationshipLabel>
        <relationshipName>Job_Potential_Franchise</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job Potential Franchise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Distance__c</columns>
        <columns>Account__c</columns>
        <columns>Job__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JPF-{0000}</displayFormat>
        <label>Job Potential Franchise  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Potential Franchise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>